insert span tag

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <!-- Product content wrapper -->
 
         <div class="product_content">
-            <div class="taxonomy font_body">PERFUME</div>
+            <div class="taxonomy font_body"><span>PERFUME</span></div>
 
-            <div class="product_title font_title">Gabrielle Essence Eau De Parfum</div>
+            <div class="product_title font_title"><span>Gabrielle Essence Eau De Parfum</span></div>
 
-            <div class="product_desc font_body">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</div>
+            <div class="product_desc font_body"><span>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</span></div>
 
             <div class="product_price ">
-                <div class="product_sales_price font_title">$149.99</div>
-                <div class="product_regular_price font_body">$169.99</div>
+                <div class="product_sales_price font_title"><span>$149.99</span></div>
+                <div class="product_regular_price font_body"><span>$169.99</span>/div>
             </div>
 
             <button value="submit" type="button" class="add_to_cart font_body">
