--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="product_price ">
                 <div class="product_sales_price font_title"><span>$149.99</span></div>
-                <div class="product_regular_price font_body"><span>$169.99</span>/div>
+                <div class="product_regular_price font_body"><span>$169.99</span></div>
             </div>
 
             <button value="submit" type="button" class="add_to_cart font_body">
